--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,11 +7,11 @@
             android:id="@+id/lock_time"
             android:defaultValue="2"
             android:dialogTitle="@string/preferences_automatic_locking_selection_title"
+            android:entries="@array/lock_time_list_texts"
+            android:entryValues="@array/lock_time_list_values"
             android:key="lock_timeout"
             android:summary="@string/preferences_summary_automatic_locking_timeout"
-            android:title="@string/preferences_title_automatic_locking_timeout"
-            android:entries="@array/lock_time_list_texts"
-            android:entryValues="@array/lock_time_list_values"/>
+            android:title="@string/preferences_title_automatic_locking_timeout" />
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="biometrics"
@@ -25,7 +25,7 @@
         <EditTextPreference
             android:key="default_user_name"
             android:summary="@string/preferences_summary_default_user_name"
-            android:title="@string/preferences_title_default_user_name"/>
+            android:title="@string/preferences_title_default_user_name" />
         <Preference
             android:key="backup_document"
             android:title="@string/preferences_title_default_backup_path" />
