--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -38,5 +38,8 @@
         <Preference
             android:key="backup_document"
             android:title="@string/preferences_title_default_backup_path" />
+        <Preference
+            android:key="time_of_last_backup"
+            android:title="@string/preferences_title_time_of_last_backup" />
     </PreferenceCategory>
 </PreferenceScreen>
