huh..what a work, but finally works. Initial naive implementation of plugin, category pager, replaces regular category screen and password list screen, works, also plugin framework with dynamic plugin registration system, enable/disable at will, as well as allow them to register to override application intents, but so that main module always has a final say, if it wants to allow plugin to override, and has a (unfinished) conflict resoution)

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -29,4 +29,10 @@
         <item>60</item>
         <item>120</item>
     </string-array>
+    <string-array name="dummy_entries">
+        <item>categorypager</item>
+    </string-array>
+    <string-array name="dummy_entry_values">
+        <item>Enhanced category and password view</item>
+    </string-array>
 </resources>
