Add softdelete to preferences

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory android:title="@string/preferences_title">
 
@@ -35,6 +36,13 @@
             android:key="default_user_name"
             android:summary="@string/preferences_summary_default_user_name"
             android:title="@string/preferences_title_default_user_name" />
+        <SeekBarPreference
+            android:key="soft_delete_days"
+            android:title="@string/preferences_title_soft_delete"
+            android:summary="@string/preferences_summary_soft_delete"
+            app:showSeekBarValue="true"
+            android:defaultValue="30"
+            android:max="365" />
         <Preference
             android:key="backup_document"
             android:title="@string/preferences_title_default_backup_path" />
