Move backup/restore into library module, along side with all automatic google backup configurations, agent etc. Almost decoupling all, SavedGPM accessor still present

--- a/app/backup/src/main/res/xml/data_extraction_rules.xml
+++ b/app/backup/src/main/res/xml/data_extraction_rules.xml
@@ -14,6 +14,9 @@
             path="safe" />
         <include
             domain="sharedpref"
+            path="fi.iki.ede.safe.preferences.xml" />
+        <include
+            domain="sharedpref"
             path="fi.iki.ede.safe.debug_preferences.xml" />
     </cloud-backup>
     <device-transfer>
@@ -23,6 +26,9 @@
         <include
             domain="database"
             path="safe" />
+        <include
+            domain="sharedpref"
+            path="fi.iki.ede.safe.preferences.xml" />
         <include
             domain="sharedpref"
             path="fi.iki.ede.safe.debug_preferences.xml" />
